name:                comma-and
version:             0.1.0.1
synopsis: Join text together with commas, and "and".
description: Join text together with commas, and "and".
homepage:            https://github.com/hapytex/comma-and#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu+gh@gmail.com
copyright:           2024 Willem Van Onsem
category:            utils
build-type:          Simple
extra-source-files:
    README.md
  , CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Text.Comma
  build-depends:
      base >= 4.7 && < 5
    , data-default-class >=0.1 && <0.2
  default-language:    Haskell2010

test-suite and
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  other-modules:
      Text.CommaSpec
  build-depends:
      base
    , comma-and
    , data-default-class >=0.1 && <0.2
    , hspec ==2.*
    , QuickCheck >=2.8
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  default-language:    Haskell2010
  default-extensions:
      BlockArguments
    , OverloadedStrings
  ghc-options:
    -Wall -Wcompat -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints


source-repository head
  type:     git
  location: https://github.com/hapytex/comma-and
